# flask_base_boider_plate

./: .dockerignore  .env.dev  .env.example  .env.local  .gitignore  .style.yapf  Dockerfile  Makefile  README.md  api.yaml  docker-compose.yml  manage.py  pyproject.toml  server.py
.circleci/: config.yml
app/: response_error_handler.py
app/bootstrap/: __init__.py
app/config/: __init__.py
app/exceptions/: __init__.py  api_response_error.py  authentication_error.py  not_found_error.py  parameter_error.py
app/helpers/: __init__.py  file_helper.py  string_helper.py
app/middlewares/: authenticate.py  basic_authenticate.py  login_as_anonymous.py  request_validate.py
app/models/: __init__.py  file.py  product.py  user.py  user_role.py
app/repositories/: __init__.py  base_repository.py  file_repository.py  product_repository.py  user_repository.py  user_role_repository.py
app/services/: __init__.py  product_service.py  storage_service.py  user_service.py
docker/db/: init.sql
docker/nginx/: nginx.conf
documents/: authentication.md  how-to-create-middleware.md  how-to-migrate-database.md  how-to-run-local.md  how-to-use-request-validate-middleware.md  how-to-validate-request-params.md  unittest.md
documents/db/: schema.dot  schema.plantuml
migrations/: env.py
migrations/versions/: 7062066a47c2_.py  7a7f5c702bc0_.py  85c3da0353e6_.py  99f3f339f2be_.py  f63a0473b052_.py
seeds/: base_seeder.py  list_product.json  product_seeder.py  seeder.py  user_seeder.py
templates/layouts/: 404.html  app.html
templates/pages/: 404.html  index.html
(+32 files in other folders)
